--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World
+<html>
+<head>
+<title>
+<marquee>
+Helloworld!
+</marquee>
+</title>
+<h1>
+<br>
+</h1>
+</head>
+
+<body>
+Hi! <br>
+I am CoderManifold.
+</body>
+</html>
+
